@@ -2,7 +2,8 @@ Version 0.3.2Aa1
 
 - Auto sync the sumary file.
 - Skip rebuild transactions option.
-
+- Not complete blockchain required.
+- Manual update.
 
 Version 0.3.1Ba1
 
